edgecontroller/network-edge/openness.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2019-2020 Intel Corporation

---
apiVersion: v1
kind: Service
metadata:
  name: eaa
  namespace: openness
spec:
  clusterIP: None
  selector:
    name: eaa
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eaa
  namespace: openness
spec:
  replicas: 1
  selector:
    matchLabels:
      name: eaa
  template:
    metadata:
      labels:
        name: eaa
    spec:
      serviceAccountName: eaa
      containers:
      - name: eaa
        image: eaa:1.0
        imagePullPolicy: Never
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: "0.1"
          limits:
            cpu: "1"
            memory: "128Mi"
        volumeMounts:
        - name: certs
          mountPath: /home/eaa/certs/eaa
        - name: kafka-certs
          mountPath: /home/eaa/certs/eaa-kafka
        - name: configs
          mountPath: /home/eaa/configs
      tolerations:
      - effect: NoSchedule
        key: cmk
        operator: Exists
      volumes:
      - name: ca-certrequester
        secret:
          secretName: ca-certrequester
      - name: kafka-certs
        secret:
          secretName: eaa-kafka
          defaultMode: 0600
      - name: certs
        emptyDir: {}
      - name: configs
        hostPath:
          path: /opt/openness/configs
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "vcac-zone"
                  operator: NotIn
                  values:
                    - "yes"

---
apiVersion: v1
kind: Service
metadata:
  name: edgedns
  namespace: openness
spec:
  clusterIP: None
  selector:
    name: edgedns
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: cli
      protocol: TCP
      port: 4204
      targetPort: 4204

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: edgedns
  namespace: openness
spec:
  selector:
    matchLabels:
      name: edgedns
  template:
    metadata:
      labels:
        name: edgedns
    spec:
      serviceAccountName: edgedns
      containers:
      - name: edgedns
        image: edgednssvr:1.0
        imagePullPolicy: Never
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            add: ["NET_ADMIN"]
        args:
        - -address=:4204
        - -port=53
        - -fwdr=$(DNS_FWDR)
        resources:
          requests:
            cpu: "0.1"
          limits:
            cpu: "1"
            memory: "128Mi"
        volumeMounts:
        - name: edgednssvr
          mountPath: /var/lib/edgedns
        - name: certs
          mountPath: /home/edgednssvr/certs
          readOnly: true
      tolerations:
      - effect: NoSchedule
        key: cmk
        operator: Exists
      volumes:
      - name: edgednssvr
        hostPath:
          path: /opt/openness/edgednssvr
      - name: ca-certrequester
        secret:
          secretName: ca-certrequester
      - name: configs
        hostPath:
          path: /opt/openness/configs
      - name: certs
        emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "vcac-zone"
                  operator: NotIn
                  values:
                    - "yes"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certsigner
  namespace: openness
spec:
  replicas: 1
  selector:
    matchLabels:
      name: certsigner
  template:
    metadata:
      labels:
        name: certsigner
    spec:
      serviceAccountName: csr-signer
      containers:
      - name: certsigner
        image: certsigner:1.0
        imagePullPolicy: Never
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: "0.1"
          limits:
            cpu: "1"
            memory: "128Mi"
        volumeMounts:
          - name: root-ca
            mountPath: /home/certsigner/certs
          - name: configs
            mountPath: /home/certsigner/configs
      volumes:
      - name: root-ca
        secret:
          secretName: root-ca
      - name: configs
        hostPath:
          path: /opt/openness/configs
      tolerations:
      - effect: NoSchedule
        key: cmk
        operator: Exists
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "vcac-zone"
                  operator: NotIn
                  values:
                    - "yes"
