edgecontroller/network-edge/default_network_policy.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2019-2020 Intel Corporation

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: block-all-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - ipBlock:
          # Workaround for kube-ovn which doesn't detect the ingress
          # when no rule is specified.
          cidr: 0.0.0.0/32
